SERVER-13701 Init TwoD stage in constructor.